# instaGRAAL

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  package-check.yml  test-cpu.yml  test-gpu-runpod.yml  test-gpu.yml
example/: hifi_bin_0.fa
instagraal/: cuda_lib_gl_single.py  instagraal.py  pyramid_sparse.py  simu_single.py
instagraal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
instagraal/kernels/: kernel_sparse_adapt.cu
scripts/: make_insilico_assembly.py
src/instagraal/: __main__.py  assembly_stats.py  cuda_lib_gl_single.py  init_nuisance.py  instagraal.py  parse_info_frags.py  post.py  pre.py  pyramid_sparse.py  simu_single.py
src/instagraal/cli/: endtoend.py  polish.py  post.py  pre.py  stats.py  test.py
tests/: conftest.py  test_assembly_stats.py  test_instagraal.py  test_instagraal_gpu.py  test_polish.py  test_post.py
tools/pycuda-stub/: pyproject.toml
tools/pycuda-stub/src/pycuda/: characterize.py  driver.py
